--- a/tests/api/_omit.scss
+++ b/tests/api/_omit.scss
@@ -22,6 +22,13 @@
     @include assert-equal(_omit(null, 'test'), ());
   }
 
+
+  $map-with-list-as-key: ('a': test, ('b', 'c'): test2);
+  @include test('should work with lists as keys') {
+      @include assert-equal(_omit($map-with-list-as-key, 'a'), (('b', 'c'): test2));
+  }
+
+
   $args: test-args('a', 'c');
 
   @include test('should work with arglists as secondary arguments') {
